finished api configuration for createFund endpoint, need to implement state management of creating a fund on the front-end
